WIP: Bump upstreams
Adopt:
- odlparent-15.0.1
- yangtools-16.0.0
- ietf-3.0.0
- mdsal-17.0.0-SNAPSHOT

// FIXME: non-snapshots

Change-Id: Icb1a643aa65acb370f66045fdf25d212691fd543
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>